k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dps
  labels:
    app: dps
    keel.sh/policy: force
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dps
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 34%
      maxUnavailable: 34%
  template:
    metadata:
      name: dps
      labels:
        app: dps
    spec:
      containers:
      - name: dps
        image: dps:latest
        ports:
          - containerPort: 4000
        resources: {}
        securityContext:
          privileged: false
          procMount: Default
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
