k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dps-private
spec:
  clusterIP: None
  ports:
  - name: epmd
    port: 4369
  selector:
    app: dps
---
apiVersion: v1
kind: Service
metadata:
  name: dps
spec:
  ports:
  - name: http
    port: 4000
  selector:
    app: dps
